[package]
name = "kvs"
version = "0.1.0"
authors = ["Andrew ziangong0714@gmail.com"]
description = "A key-value store"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
failure = "0.1.5"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
criterion = "0.3"
rand = "0.6.5"
log = "*"
env_logger = "*"
sled = "*"

[dependencies.clap]
features = ["cargo"]
